# ml-playground

./: README.md
ml-in-production/: collection.py  model.py  preparation.py  random_forest_model.ipynb  runner.py
new-ml-in-production/: Makefile  pyproject.toml  setup.cfg
new-ml-in-production/.github/: workflow.yml
new-ml-in-production/new_ml_in_production/: collection.py  config.py  db_model.py  model.py  model_service.py  preparation.py  runner.py  runner_builder.py  runner_inference.py
new-ml-in-production/new_ml_in_production/config/: config.py
new-ml-in-production/new_ml_in_production/database/: db.sqlite  db_model.py
new-ml-in-production/new_ml_in_production/models/: model_builder_service.py  model_inference_service.py  model_service.py
new-ml-in-production/new_ml_in_production/models/pipeline/: collection.py  model.py  preparation.py
new-ml-in-production/notebooks/: random_forest_model.ipynb
new-ml-inference-service/: Makefile  pyproject.toml
new-ml-inference-service/new-ml-inference-service/: pyproject.toml
new-ml-inference-service/new-ml-inference-service/new_ml_inference_service/api/: prediction.py
new-ml-inference-service/new-ml-inference-service/new_ml_inference_service/config/: config.py
new-ml-inference-service/new-ml-inference-service/new_ml_inference_service/services/: __init__.py  model_inference_service.py
new-ml-inference-service/new_ml_inference_service/: run.py
new-ml-inference-service/new_ml_inference_service/api/: prediction.py
new-ml-inference-service/new_ml_inference_service/schemas/: apartment.py
(+6 files in other folders)
