[tool.poetry]
name = "new-ml-in-production"
version = "0.1.0"
description = ""
authors = ["Kody Buss <kody.buss@zelis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
