[tool.poetry]
name = "new-ml-in-production"
version = "0.1.0"
description = ""
authors = ["Kody Buss <kody.buss@zelis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
pydantic-settings = "^2.7.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.36"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude=[
    "notebooks/random_forest_model.ipynb"
]
